# vibes

./: README.md  com.cassidyjames.vibes.json  meson.build  vibes.doap
data/: gresource.xml  launcher.desktop  meson.build  metainfo.xml
data/ui/: main.blp
src/: App.vala  Config.vala.in  MainWindow.vala  meson.build
